hack/legacy/test/cases/03-plugin-correlation-id/ingress.yaml
apiVersion: configuration.konghq.com/v1
kind: KongPlugin
metadata:
  name: request-id
config:
  header_name: my-request-id
plugin: correlation-id
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo
  annotations:
    kubernetes.io/ingress.class: kong
    konghq.com/plugins: request-id
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: echo
            port:
              number: 8080
        path: /baz
        pathType: Prefix
